# meta-backend

./: .gitignore  README.md
data-structures-algorithms/: BigO.js  cookie.js  gcd.py  hanoi.py  index.js  note.md  package.json
data-structures-algorithms/data_structures/: Graph.py  LinkedList.py  linked_list.py  main.py  singly_linked_list.py
data-structures-algorithms/graph/: graph.py  queue.py
data-structures-algorithms/linkedlist/: LinkedList.js  doubly_linked_list.py  linked_list.py  node.py
data-structures-algorithms/sorting/: BubbleSort.js  BubbleSort.ts
data-structures-algorithms/tree/: bst.go  bst.py  heap.py
html-css/first/: index.html
interview/arrays-hashing/: anagram.py  find_duplicate.py  find_max_sum.py  find_min.py  find_pairs.py  find_product.py  find_sum.py  first_last.py  first_unique.py  group_anagrams.py  (+13 more)
master-typescript/: README.md  basics.ts  fizzBuzz.ts
projects/: data.db
projects/template/: README.md  pyproject.toml  reminder.p  requirements-dev.txt  requirements-test.txt  requirements.txt  tox.ini
projects/template/docs/: conf.py
projects/template/docs/_build/doctrees/: environment.pickle  index.doctree
projects/template/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
projects/template/docs/_build/html/_sources/: index.rst.txt
projects/template/src/: hello_world.py  reminder.py
projects/template/tests/: test_hello_world.py  test_reminder.py
projects/template/tests/features/: hello_world.feature
python/: lists.py  logic.py  loops.py  note.md  string.py
(+44 files in other folders)
