[tool.poetry]
name = "template"
version = "0.1.0"
description = "The template for Python project"
authors = ["augustine <augustino0890@gmail.com>"]
license = "MIT"
readme = "README.md"

[[tool.poetry.packages]]
include = "src"

[tool.poetry.dependencies]
python = ">=3.10"
click = "^8.1.7"
pip-tools = "^7.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
flake8 = "^7.0.0"
pre-commit = "^3.6.0"
tox = "^4.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
